# web_bot

./: .env  config.py  pyproject.toml  requirements.txt
app/: logger.py  main.py  models.py  rails.py  retriever.py  utils.py
app/clear_chroma_database/e7a8f10f-6b33-4402-ab70-b93a478b7f4c/: index_metadata.pickle
app/guardrails_config/: config.yaml  rails_colang.co
app/main_database/1d56bf87-373d-4628-a56d-31984874ef29/: index_metadata.pickle
app/static/: app.js  style.css
app/templates/: base.html
